# NKB-Callable

./: CMakeLists.txt  README.md
exec/: main_btrix.c  main_cholsky.c  main_emit.c  main_gmtry.c  main_mxm.c  main_vpenta.c  nas.c
include/: common.h  custom_complex.h  nkb_btrix.h  nkb_cfft2d.h  nkb_cholsky.h  nkb_emit.h  nkb_gmtry.h  nkb_mxm.h  nkb_vpenta.h
